--- a/form-all.css
+++ b/form-all.css
@@ -1,9 +1,9 @@
-*{
+/* *{
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+} */
 :root{
 	--width: 800px;
 	--form-palette: crimson;
