--- a/form-basic.css
+++ b/form-basic.css
@@ -15,7 +15,7 @@ body{
 	padding: 0;
 	font-family: var(--font);
 }
-input[type=text], textarea{
+input[type=text], input[type=password], input[type=tel], input[type=email], textarea{
 	margin: 0;
 	padding: 10px 0;
 	width: var(--form-width);
