--- a/buttons.css
+++ b/buttons.css
@@ -17,7 +17,7 @@
 
 .btn {
   display: inline-block;
-  padding: 9px 12px 7px 12px;
+  padding: 10px 12px;
   width: fit-content;
   font: .9rem/1rem sans-serif;
   line-height: 1.2rem;
